# Projects

cpp-minesweeper/: .gitignore  CMakeLists.txt  README.md
cpp-minesweeper/include/: Board.h  Game.h  GameConfig.h  SfmlApp.h
cpp-minesweeper/src/: Board.cpp  Game.cpp  SfmlApp.cpp  main.cpp  sfml_main.cpp
扫雷（简单版）/: 2026.3.4.vcxproj  2026.3.4.vcxproj.filters  3.4.c  game.c  game.h
扫雷（简单版）/x64/Debug/: 2026.3.4.exe.recipe  2026.3.4.ilk  vc143.idb
扫雷（简单版）/x64/Debug/2026.3.4.tlog/: 2026.3.4.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
